--- a/style.css
+++ b/style.css
@@ -9,6 +9,26 @@
     font-size: 24px;
 }
 
+.barra {
+    display: none
+}
+
+.sobre {
+    font: Poppins;
+    font-size: 25px;
+    margin-left: 75px;
+    margin-right: 75px;
+    line-height: 40px;
+    box-shadow: 0 5px 10px;
+    border-radius: 5px;
+    background: #fff;
+    text-align: center;
+    padding: 30px 20px;
+    margin-bottom: 10px;
+    background: linear-gradient(45deg, violet, lightblue);
+    text-align: justify;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
@@ -42,12 +62,35 @@ h2 {
     margin-bottom: 0px;
 }
 
+h3 {
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px;
+    margin-top: 0px;
+    height: 130px;
+    line-height: 130px;
+    font-family: Poppins;
+    font-size: 60px;
+    text-align: center;
+    margin-left: 75px;
+    margin-right: 75px;
+    background: linear-gradient(45deg, lightblue, lightgreen);
+    margin-bottom: 0px;
+}
+
+h4 {
+    display: none
+}
+
+h5 {
+    height: 50px;
+}
+
 iframe {
     height: 600px;
 }
 
 .container {
-    margin-top: 0px;
+    margin-top: 10px;
     background: linear-gradient(45deg, lightblue, lightgreen);
     padding:15px 9%;
 }
