--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    background: white;
+}
+
 .box-titulo {
     font: Poppins;
     font-size: 35px;
@@ -13,20 +17,52 @@
     display: none
 }
 
-.sobre {
+.subtitulo {
     font: Poppins;
+    text-align: center;
+    font-size: 35px;
+}
+
+.explicacao {
+    font: Poppins;
+    text-align: center;
     font-size: 25px;
-    margin-left: 75px;
-    margin-right: 75px;
-    line-height: 40px;
+}
+
+.container-topo {
+    border-radius: 10px;
+    margin-top: 10px;
+    background: rgba(255, 255, 255, 0);
+    background: linear-gradient(45deg, darkblue, lightblue);
+    padding:15px 9%;
+}
+
+.container-topo .box-container-topo {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(100px, 1fr));
+    gap:15px;
+}
+
+.container-topo .box-container-topo .box-topo {
     box-shadow: 0 5px 10px;
+    font: Poppins;
+    font-size: 24px;
+    line-height: 40px;
     border-radius: 5px;
     background: #fff;
     text-align: center;
     padding: 30px 20px;
     margin-bottom: 10px;
-    background: linear-gradient(45deg, violet, lightblue);
-    text-align: justify;
+    justify-content: center;
+}
+
+.container-topo .box-container-topo .box-topo:hover {
+    transform: translateY(-10px);
+}
+
+.sobre:hover {
+    transform: translateY(-15px);
+    font-color: black;
 }
 
 body {
@@ -40,17 +76,17 @@ iframe {
     border: 5px solid #ccc;
 }
 
-h1 {
+.titulo_portfolio {
     margin-top: 0px;
-    height: 350px;
-    line-height: 350px;
+    height: 150px;
+    line-height: 150px;
     font-family: Poppins;
     font-size: 60px;
     text-align: center;
-    background-image: url('static/imagem-titulo.png');
-    background-size: cover;
-    background-position: center;
     margin-bottom: 0px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px;
+    background: linear-gradient(45deg, darkblue, lightblue);
 }
 
 h2 {
@@ -62,7 +98,7 @@ h2 {
     margin-bottom: 0px;
 }
 
-h3 {
+.bem-vindo {
     border-radius: 10px;
     box-shadow: 5px 5px 10px;
     margin-top: 0px;
@@ -77,12 +113,12 @@ h3 {
     margin-bottom: 0px;
 }
 
-h4 {
+.janela_iframe {
     display: none
 }
 
-h5 {
-    height: 50px;
+.espaco {
+    height: 20px;
 }
 
 iframe {
@@ -91,13 +127,14 @@ iframe {
 
 .container {
     margin-top: 10px;
-    background: linear-gradient(45deg, lightblue, lightgreen);
+    background: rgba(255, 255, 255, 0);
+    background: linear-gradient(45deg, darkblue, lightblue);
     padding:15px 9%;
 }
 
 .container .box-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: repeat(3, minmax(100px, 1fr));
     gap:15px;
 }
 
@@ -108,4 +145,16 @@ iframe {
     text-align: center;
     padding: 30px 20px;
     margin-bottom: 10px;
+}
+
+.container .box-container .box:hover {
+    transform: translateY(-11px);
+}
+
+.container .box-container .box .box-titulo {
+    color: black;
+}
+
+.container .box-container .box .box-titulo:hover {
+    color: #0a65c1;
 }
