--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(to top, gray 90%, white);
+    background: linear-gradient(top, lightgray, white);
 }
 
 .box-titulo {
@@ -33,6 +33,7 @@ body {
 
 .container-topo {
     display: flex;
+    background: linear-gradient(45deg, lightgreen, lightblue);
     border-radius: 10px;
     margin-top: 10px;
     background: rgba(255, 255, 255, 0);
@@ -42,7 +43,6 @@ body {
 .container-topo .box-container-topo {
     display: grid;
     gap:25px;
-    background: linear-gradient(45deg, lightgreen, lightblue);
     grid-template-columns: repeat(3, 1fr);
     justify-content: space-between; /* Distribui o espaço restante de forma equilibrada */
     flex-wrap: wrap; /* Permite que os itens quebrem para a próxima linha em telas pequenas */
