--- a/style.css
+++ b/style.css
@@ -106,7 +106,8 @@
 }
 
 .python-texto3 {
-    margin-top: 10px;
+    font-family: 'Tahoma', sans-serif;
+    margin-top: 15px;
     font-size: 35px;
     margin-left: 35px;
     text-align: center;
