--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #foto-profile, #foto-linguagens {
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     border-radius: 50%;
     padding: 30px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
@@ -21,12 +21,13 @@
 }
 
 #foto-linguagens {
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     border-radius: 50%;
     padding: 30px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-    margin-left: 250px;
+    margin-top: 100px;
+    margin-left: 150px;
     margin-right: 100px;
     display: block;
 }
@@ -43,8 +44,8 @@
 }
 
 #foto-python {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     padding: 30px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
@@ -60,8 +61,8 @@
 }
 
 #foto-java {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     padding: 30px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
@@ -95,7 +96,7 @@
 
 #texto-topo {
     font-family: 'Tahoma', sans-serif;
-    font-size: 28px;
+    font-size: 30px;
     text-align: justify;
     margin-right: 250px;
 }
