--- a/style.css
+++ b/style.css
@@ -44,8 +44,8 @@
 }
 
 #foto-python {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     padding: 30px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
@@ -61,8 +61,8 @@
 }
 
 #foto-java {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     padding: 30px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
@@ -98,7 +98,7 @@
     font-family: 'Tahoma', sans-serif;
     font-size: 30px;
     text-align: justify;
-    margin-right: 250px;
+    margin-right: 600px;
 }
 
 @media (max-width: 768px) {
@@ -134,7 +134,6 @@
     background: linear-gradient(to top, rgb(204, 107, 59), rgb(161, 78, 37));
     -webkit-background-clip: text;
     color: transparent;
-    margin-top: 10px;
     font-size: 45px;
     text-align: center;
 }
@@ -174,11 +173,19 @@
 }
 
 .container2 {
+    border: solid rgb(161, 78, 37, 0.6);
+    margin-left: 350px;
     display: flex;
     gap: 25px;
     flex-wrap: wrap;
 }
 
+@media (max-width: 768px) {
+    .container2 {
+        margin-left: 10px;
+        border: solid rgb(0, 0, 0, 0);
+    }
+}
 
 .container2 .caixa {
     background: #fff;
@@ -187,11 +194,12 @@
 }
 
 .item-baixo {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     padding: 30px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    margin-top: 40px;
     margin-left: 150px;
     margin-right: 150px;
     display: block;
@@ -205,7 +213,16 @@
 }
 
 #container-baixo-java {
-    margin-top: 200px;
+    border: solid rgb(161, 78, 37, 0.6);
+    margin-top: 30px;
+    height: 400px;
+}
+
+@media (max-width: 768px) {
+    #container-baixo-java {
+        margin-left: 10px;
+        border: solid rgb(0, 0, 0, 0);
+    }
 }
 
 @media (max-width: 768px) {
