--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@
 
 .container2 {
     border: solid rgb(161, 78, 37, 0.6);
+    margin-right: 350px;
     margin-left: 350px;
     display: flex;
     gap: 25px;
@@ -182,6 +183,7 @@
 
 @media (max-width: 768px) {
     .container2 {
+        margin-right: 0px;
         margin-left: 10px;
         border: solid rgb(0, 0, 0, 0);
     }
