--- a/style.css
+++ b/style.css
@@ -172,8 +172,8 @@
 
 .container {
     min-width: 1600px;
+    max-width: 1920px;
     display: flex;
-    margin-right: 30px;
 }
 
 @media (max-width: 768px) {
