--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@
     font-family: 'Tahoma', sans-serif;
     margin-top: 30px;
     font-size: 30px;
-    text-align: justify;
+    text-align: center;
 }
 
 @media (max-width: 768px) {
