--- a/style.css
+++ b/style.css
@@ -202,11 +202,15 @@
     max-width: 1920px;
     border: solid rgb(161, 78, 37, 0.6);
     margin-left: 350px;
-    margin-top: 30px;
+    margin-top: 50px;
     margin-right: 350px;
     display: flex;
     gap: 25px;
     flex-wrap: wrap;
+}
+
+#container-baixo-java {
+    min-height: 350px;
 }
 
 
