--- a/style.css
+++ b/style.css
@@ -291,3 +291,8 @@
     font-size: 23px;
     text-align: left;
 }
+
+#reserved {
+    font-family: 'Tahoma', sans-serif;
+    color: rgb(204, 107, 59);
+}
