--- a/style2.css
+++ b/style2.css
@@ -3,12 +3,20 @@
     height: 800px;
     width: 1024px;
     display: flex;
+    font-size: 24px;
     justify-content: center;
     align-items: center;
+    background-color: white;
 }
 
 body {
     font-family: 'Tahoma', sans-serif;
+    font-size: 30px;
+    background-image: url('assets/seguranca-digital.jpg');
+    background-size: cover;
+}
+
+#acesso remoto {
     font-size: 30px;
 }
 
@@ -25,6 +33,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: white;
+    opacity: 0.8;
+}
+
+#pagina-secreta {
+    background-color: white;
+    opacity: 0.8;
 }
 
 .campo-preenchimento {
