--- a/style2.css
+++ b/style2.css
@@ -42,6 +42,8 @@ body {
 }
 
 #painel {
+    display: flex;
+    width: 50%;
     background-color: white;
     opacity: 0.8;
 }
@@ -57,6 +59,9 @@ body {
 
 .container {
     flex-wrap: wrap;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 #notepad {
