--- a/style2.css
+++ b/style2.css
@@ -29,6 +29,7 @@ body {
 
 #login-form {
     display: flex;
+    border-radius: 35%;
     justify-content: center;
     align-items: center;
     background-color: white;
