--- a/style-reserved.css
+++ b/style-reserved.css
@@ -1,11 +1,25 @@
 #tela {
     margin-top: 50px;
-    min-height: 800px;
-    min-width: 1024px;
+    height: 1080px;
+    width: 1920px;
     font-size: 24px;
     justify-content: center;
     align-items: center;
     background-color: white;
+}
+
+@media (max-width: 768px) {
+    #div-iframe {
+        height: 640px;
+        width: 768px;
+    }
+}
+
+@media (max-width: 480px) {
+    #div-iframe {
+        height: 320px;
+        width: 480px;
+    }
 }
 
 body {
